attempts to fix mobile right white space

--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,16 @@
 
     #header-div {
         height: 20vh;
-        width: 100%;
+        width: 100vw;
         margin: 0;
     }
 
     #site-title {
         flex-flow: row nowrap;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
         height: 20vh;
-        width: 100%;
+        width: 100vw;
         display: flex;
         background-color: black;
         box-shadow: 0 4px 15px #9fa898;
@@ -36,6 +36,7 @@
     #hamburger-btn {
         display: block;
         font-size: 2rem;
+        width: fit-content;
         background: none;
         border: none;
         color: white;
@@ -313,6 +314,7 @@ body::-webkit-scrollbar {
   width: 0;
   height: 0;
 }
+
 /*
 #header-div {
     height: 28vh;
